[flake8]
ignore = D203
exclude = .*,__pycache__,docs/source/conf.py
max-line-length = 120
[tool:pytest]
# log_format = %%(asctime)s, %%(levelname)s,  %%(funcName)s(), line: %%(lineno)d, %%(message)s'
log_date_format = %%Y-%%m-%%d %%H:%%M:%%S
log_cli=true
log_level=INFO
filterwarnings =
    ignore:.*U.*mode is deprecated:DeprecationWarning

[metadata]
name = odeon
version = file: VERSION
author = samy khelifi
author_email = samy.khelifi@ign.fr
description = odeon stands for object detection with earth observation with neural network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IGNF/odeon
project_urls =
    Bug Tracker = https://github.com/IGNF/odeon/issues

# to see classifiers available for pypi see: https://pypi.org/pypi?%3Aaction=list_classifiers
# to see classifiers available for test.pypi see: https://test.pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
install_requires =
    geopandas>=0.10
    rasterio>=1.1.5
    omegaconf
    jsonargparse
include_package_data=True
[options.package_data]
* = *.yml
[options.packages.find]
where = .
[options.entry_points]
console_scripts =
    odeon = odeon.main:main
