[metadata]
name = odeon
version = file: VERSION
author = samy khelifi
author_email = samy.khelifi@ign.fr

# to see classifiers available for pypi see: https://pypi.org/pypi?%3Aaction=list_classifiers
# to see classifiers available for test.pypi see: https://test.pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
